add example.py, add a check in SGD, put sigmoid in helper

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:10:29.786623Z",
-     "start_time": "2020-10-25T11:10:29.726507Z"
+     "end_time": "2020-10-25T19:05:39.338527Z",
+     "start_time": "2020-10-25T19:05:39.150447Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -37,17 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:44:50.310719Z",
-     "start_time": "2020-10-25T11:44:42.866763Z"
+     "end_time": "2020-10-25T19:05:48.069510Z",
+     "start_time": "2020-10-25T19:05:40.780878Z"
     }
    },
    "outputs": [],
    "source": [
-    "from proj1_helpers import *\n",
     "from implementations import *\n",
+    "from proj1_helpers import *\n",
+    "\n",
     "\n",
     "DATA_TRAIN_PATH = '../data/train.csv' \n",
     "y_pre, tX_pre, ids = load_csv_data(DATA_TRAIN_PATH)"
@@ -55,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:44:02.073376Z",
-     "start_time": "2020-10-25T11:43:02.091933Z"
+     "end_time": "2020-10-25T17:54:42.380876Z",
+     "start_time": "2020-10-25T17:53:40.951381Z"
     }
    },
    "outputs": [
@@ -95,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:44:50.601615Z",
-     "start_time": "2020-10-25T11:44:50.484592Z"
+     "end_time": "2020-10-25T19:05:48.266682Z",
+     "start_time": "2020-10-25T19:05:48.109951Z"
     }
    },
    "outputs": [
@@ -151,11 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:44:02.904395Z",
-     "start_time": "2020-10-25T11:44:02.605820Z"
+     "end_time": "2020-10-25T19:06:05.758830Z",
+     "start_time": "2020-10-25T19:06:05.426389Z"
     }
    },
    "outputs": [
@@ -444,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:49:49.617078Z",
-     "start_time": "2020-10-25T11:49:33.435205Z"
+     "end_time": "2020-10-25T19:06:24.005783Z",
+     "start_time": "2020-10-25T19:06:10.643998Z"
     }
    },
    "outputs": [
@@ -506,11 +498,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:51:52.246247Z",
-     "start_time": "2020-10-25T11:50:30.869603Z"
+     "end_time": "2020-10-25T18:39:54.881284Z",
+     "start_time": "2020-10-25T18:38:35.848078Z"
     }
    },
    "outputs": [
@@ -619,11 +611,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:51:56.349225Z",
-     "start_time": "2020-10-25T11:51:53.030473Z"
+     "end_time": "2020-10-25T18:38:26.659060Z",
+     "start_time": "2020-10-25T18:38:23.192320Z"
     }
    },
    "outputs": [
@@ -639,7 +631,6 @@
     "#################\n",
     "# Test SGD on 20%\n",
     "#################\n",
-    "\n",
     "\n",
     "degree = 2\n",
     "gamma = 0.001\n",
@@ -811,11 +802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T11:56:33.913468Z",
-     "start_time": "2020-10-25T11:56:32.582626Z"
+     "end_time": "2020-10-25T18:40:11.577338Z",
+     "start_time": "2020-10-25T18:40:10.156947Z"
     }
    },
    "outputs": [
@@ -860,7 +851,7 @@
     }
    },
    "source": [
-    "## GD optimization with CV + hyperparam optimization"
+    "## Ridge optimization with CV + hyperparam optimization"
    ]
   },
   {
